--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,4 @@
-# Compiled source #
-###################
+# Compiled source
 *.com
 *.class
 *.dll
@@ -10,9 +9,12 @@
 *.pdb
 *.lib
 *.exp
+*.o.*
+*.a
+*.so.dbg
+*.bin
 
-# Packages #
-############
+# Packages
 # it's better to unpack these files and commit the raw source
 # git has its own built in compression methods
 *.7z
@@ -24,30 +26,46 @@
 *.tar
 *.zip
 
-# Logs and databases #
-######################
+# Logs and databases
 *.log
 *.sql
 *.sqlite
 
-# OS generated files #
-######################
+# OS generated files
 .DS_Store*
 ehthumbs.db
 Icon?
 Thumbs.db
 
-# Visual studio #
-##########
+# Build generated files
+autom4te.cache
+
+# Editors / debuggers / other output files
+*~
+*.bak
+*.orig
+*.patch
+callgrind.out.*
+
+# Visual studio
 Debug
 Release
 *_Debug
 *_Release
-*.user
-*.suo
-*.ncb
 *.webinfo
+*.ncb
+*.suo
 *.sdf
+*.opensdf
+*.sln.cache
+*.vsp
+ipch
+*.user
 
 # Subversion data folders
 .svn/
+
+# CMake temporary files
+CMakeFiles
+CMakeCache.txt
+cmake_install.cmake
