Rewrote HeroWars server to be more OO and easy to handle

--- a/HeroWars/VS2008/gamed.vcproj
+++ b/HeroWars/VS2008/gamed.vcproj
@@ -41,7 +41,7 @@
 			<Tool
 				Name="VCCLCompilerTool"
 				Optimization="0"
-				AdditionalIncludeDirectories="..\dep\include"
+				AdditionalIncludeDirectories="..\dep\include; ..\;"
 				PreprocessorDefinitions="WIN32;_DEBUG;_CONSOLE"
 				MinimalRebuild="true"
 				BasicRuntimeChecks="3"
@@ -177,18 +177,54 @@
 				RelativePath="..\gamed\main.cpp"
 				>
 			</File>
+			<File
+				RelativePath="..\gamed\NetworkListener.cpp"
+				>
+			</File>
+			<File
+				RelativePath="..\gamed\NetworkListener.h"
+				>
+			</File>
 		</Filter>
 		<Filter
 			Name="Header Files"
 			Filter="h;hpp;hxx;hm;inl;inc;xsd"
 			UniqueIdentifier="{93995380-89BD-4b04-88EB-625FBE52EBFB}"
 			>
+			<File
+				RelativePath="..\common.h"
+				>
+			</File>
 		</Filter>
 		<Filter
 			Name="Resource Files"
 			Filter="rc;ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe;resx;tiff;tif;png;wav"
 			UniqueIdentifier="{67DA6AB6-F800-4c08-8B7A-83BB121AAD01}"
 			>
+		</Filter>
+		<Filter
+			Name="Protocol"
+			>
+			<File
+				RelativePath="..\gamed\Handlers.cpp"
+				>
+			</File>
+			<File
+				RelativePath="..\gamed\PacketHandler.cpp"
+				>
+			</File>
+			<File
+				RelativePath="..\gamed\PacketHandler.h"
+				>
+			</File>
+			<File
+				RelativePath="..\gamed\Packets.cpp"
+				>
+			</File>
+			<File
+				RelativePath="..\gamed\Packets.h"
+				>
+			</File>
 		</Filter>
 	</Files>
 	<Globals>
