--- a/IntPe9/win/VC90/enet-1.2.5.vcproj
+++ b/IntPe9/win/VC90/enet-1.2.5.vcproj
@@ -2,9 +2,9 @@
 <VisualStudioProject
 	ProjectType="Visual C++"
 	Version="9,00"
-	Name="Shared"
-	ProjectGUID="{7C792F8F-50E1-49A0-B7D4-6C96977DFEDC}"
-	RootNamespace="Shared"
+	Name="enet-1.2.5"
+	ProjectGUID="{8396D19A-F583-4DB7-B02E-25A04EA97626}"
+	RootNamespace="enet125"
 	Keyword="Win32Proj"
 	TargetFrameworkVersion="196613"
 	>
@@ -18,8 +18,8 @@
 	<Configurations>
 		<Configuration
 			Name="Debug|Win32"
-			OutputDirectory="$(SolutionDir)$(ConfigurationName)"
-			IntermediateDirectory="$(ConfigurationName)"
+			OutputDirectory=".\enet-1.2.5_$(PlatformName)_$(ConfigurationName)"
+			IntermediateDirectory=".\enet-1.2.5_$(PlatformName)_$(ConfigurationName)"
 			ConfigurationType="4"
 			CharacterSet="1"
 			>
@@ -41,14 +41,14 @@
 			<Tool
 				Name="VCCLCompilerTool"
 				Optimization="0"
-				AdditionalIncludeDirectories="$(BOOST)"
 				PreprocessorDefinitions="WIN32;_DEBUG;_LIB"
 				MinimalRebuild="true"
 				BasicRuntimeChecks="3"
-				RuntimeLibrary="1"
+				RuntimeLibrary="3"
 				UsePrecompiledHeader="0"
 				WarningLevel="3"
 				DebugInformationFormat="4"
+				CompileAs="1"
 			/>
 			<Tool
 				Name="VCManagedResourceCompilerTool"
@@ -61,7 +61,6 @@
 			/>
 			<Tool
 				Name="VCLibrarianTool"
-				OutputFile="..\bin\$(ConfigurationName)\$(ProjectName).lib"
 			/>
 			<Tool
 				Name="VCALinkTool"
@@ -81,8 +80,8 @@
 		</Configuration>
 		<Configuration
 			Name="Release|Win32"
-			OutputDirectory="$(SolutionDir)$(ConfigurationName)"
-			IntermediateDirectory="$(ConfigurationName)"
+			OutputDirectory=".\enet-1.2.5_$(PlatformName)_$(ConfigurationName)"
+			IntermediateDirectory=".\enet-1.2.5_$(PlatformName)_$(ConfigurationName)"
 			ConfigurationType="4"
 			CharacterSet="1"
 			WholeProgramOptimization="1"
@@ -107,7 +106,7 @@
 				Optimization="2"
 				EnableIntrinsicFunctions="true"
 				PreprocessorDefinitions="WIN32;NDEBUG;_LIB"
-				RuntimeLibrary="0"
+				RuntimeLibrary="2"
 				EnableFunctionLevelLinking="true"
 				UsePrecompiledHeader="0"
 				WarningLevel="3"
@@ -124,7 +123,6 @@
 			/>
 			<Tool
 				Name="VCLibrarianTool"
-				OutputFile="..\bin\$(ConfigurationName)\$(ProjectName).lib"
 			/>
 			<Tool
 				Name="VCALinkTool"
@@ -152,7 +150,35 @@
 			UniqueIdentifier="{4FC737F1-C7A5-4376-A066-2A32D752A2FF}"
 			>
 			<File
-				RelativePath=".\Common.cpp"
+				RelativePath="..\..\Libs\enet-1.2.5\callbacks.c"
+				>
+			</File>
+			<File
+				RelativePath="..\..\Libs\enet-1.2.5\host.c"
+				>
+			</File>
+			<File
+				RelativePath="..\..\Libs\enet-1.2.5\list.c"
+				>
+			</File>
+			<File
+				RelativePath="..\..\Libs\enet-1.2.5\packet.c"
+				>
+			</File>
+			<File
+				RelativePath="..\..\Libs\enet-1.2.5\peer.c"
+				>
+			</File>
+			<File
+				RelativePath="..\..\Libs\enet-1.2.5\protocol.c"
+				>
+			</File>
+			<File
+				RelativePath="..\..\Libs\enet-1.2.5\unix.c"
+				>
+			</File>
+			<File
+				RelativePath="..\..\Libs\enet-1.2.5\win32.c"
 				>
 			</File>
 		</Filter>
@@ -162,15 +188,41 @@
 			UniqueIdentifier="{93995380-89BD-4b04-88EB-625FBE52EBFB}"
 			>
 			<File
-				RelativePath=".\Common.h"
+				RelativePath="..\..\Libs\enet-1.2.5\enet\callbacks.h"
 				>
 			</File>
-		</Filter>
-		<Filter
-			Name="Resource Files"
-			Filter="rc;ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe;resx;tiff;tif;png;wav"
-			UniqueIdentifier="{67DA6AB6-F800-4c08-8B7A-83BB121AAD01}"
-			>
+			<File
+				RelativePath="..\..\Libs\enet-1.2.5\enet\enet.h"
+				>
+			</File>
+			<File
+				RelativePath="..\..\Libs\enet-1.2.5\enet\list.h"
+				>
+			</File>
+			<File
+				RelativePath="..\..\Libs\enet-1.2.5\enet\protocol.h"
+				>
+			</File>
+			<File
+				RelativePath="..\..\Libs\enet-1.2.5\enet\time.h"
+				>
+			</File>
+			<File
+				RelativePath="..\..\Libs\enet-1.2.5\enet\types.h"
+				>
+			</File>
+			<File
+				RelativePath="..\..\Libs\enet-1.2.5\enet\unix.h"
+				>
+			</File>
+			<File
+				RelativePath="..\..\Libs\enet-1.2.5\enet\utility.h"
+				>
+			</File>
+			<File
+				RelativePath="..\..\Libs\enet-1.2.5\enet\win32.h"
+				>
+			</File>
 		</Filter>
 	</Files>
 	<Globals>
