WARNING: Compile debug first then release

--- a/IntPe9/win/VC90/League of Legends.vcproj
+++ b/IntPe9/win/VC90/League of Legends.vcproj
@@ -137,6 +137,7 @@
 			<Tool
 				Name="VCLinkerTool"
 				AdditionalDependencies="ws2_32.lib"
+				OutputFile="..\..\bin\$(ConfigurationName)\$(ProjectName).dll"
 				LinkIncremental="1"
 				GenerateDebugInformation="true"
 				SubSystem="2"
