Little output fix

--- a/HeroWars/VC90/enet-1.2.5.vcproj
+++ b/HeroWars/VC90/enet-1.2.5.vcproj
@@ -61,7 +61,7 @@
 			/>
 			<Tool
 				Name="VCLibrarianTool"
-				OutputFile="..\bin\$(ProjectName).lib"
+				OutputFile="$(OutDir)\$(ProjectName).lib"
 			/>
 			<Tool
 				Name="VCALinkTool"
