--- a/HeroWars/win/VC100/gamed.vcxproj.filters
+++ b/HeroWars/win/VC100/gamed.vcxproj.filters
@@ -51,5 +51,8 @@
     <ClInclude Include="..\..\gamed\Packets.h">
       <Filter>Protocol</Filter>
     </ClInclude>
+    <ClInclude Include="..\..\gamed\ChatBox.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
