--- a/LOLProxy/LOLDllProxy/LOLDllProxy.vcxproj
+++ b/LOLProxy/LOLDllProxy/LOLDllProxy.vcxproj
@@ -40,7 +40,7 @@
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <LinkIncremental>true</LinkIncremental>
-    <IncludePath>C:\Users\Jean\Documents\Visual Studio 2010\Projects\LOLProxy\enet-1.3.3\include;$(IncludePath)</IncludePath>
+    <IncludePath>C:\Users\Jean\Documents\Visual Studio 2010\Projects\HeroWars\HeroWars\HeroWars\dep\include;$(IncludePath)</IncludePath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <LinkIncremental>false</LinkIncremental>
@@ -56,8 +56,8 @@
     <Link>
       <SubSystem>Windows</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalLibraryDirectories>C:\Users\Jean\Documents\Visual Studio 2010\Projects\LOLProxy\enet-1.3.3\Debug;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
-      <AdditionalDependencies>enet.lib;ws2_32.lib;winmm.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalLibraryDirectories>C:\Users\Jean\Documents\Visual Studio 2010\Projects\HeroWars\HeroWars\HeroWars\win\VC100\enet-1.2.5__Win32_Debug;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalDependencies>enet-1.2.5.lib;ws2_32.lib;winmm.lib;%(AdditionalDependencies)</AdditionalDependencies>
       <IgnoreAllDefaultLibraries>false</IgnoreAllDefaultLibraries>
     </Link>
   </ItemDefinitionGroup>
